--- a/day3-enter-max-width/style.css
+++ b/day3-enter-max-width/style.css
@@ -23,15 +23,18 @@ body {
   font-family: sans-serif;
 }
 
+.background--dark {
+  background: #23424a;
+  color: white;
+}
+
 .container {
   width: 80%;
   max-width: 750px;
   margin: 0 auto;
-  background: #23424a;
-  color: white;
-  padding: 50px 0;
 }
 
 .intro-content {
   width: 50%;
+  padding: 50px 0;
 }
