--- a/day5-practice-time/style.css
+++ b/day5-practice-time/style.css
@@ -7,10 +7,16 @@
 }
 
 :root {
-  font-size: clamp(0.875rem, 0.721rem + 0.6573vw, 1.3125rem);
+  --fs-title: clamp(2rem, 1.6479rem + 1.5023vw, 3rem);
+  --fs-body: clamp(0.875rem, 0.721rem + 0.6573vw, 1.3125rem);
   font-family: 'Roboto', sans-serif;
   --dark-color: #23424a;
   --accent-color: #38cfd9;
+}
+
+html,
+body {
+  font-size: var(--fs-body);
 }
 
 .hero {
@@ -24,7 +30,7 @@
 }
 
 .hero-title {
-  font-size: 2.3em;
+  font-size: var(--fs-title);
   font-weight: 900;
   margin-bottom: 0.5em;
 }
