--- a/day5-practice-time/style.css
+++ b/day5-practice-time/style.css
@@ -1,53 +1,59 @@
 *,
-*:before,
-*:after {
+*::before,
+*::after {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
 }
 
 :root {
-  --fs-title: clamp(2rem, 1.6479rem + 1.5023vw, 3rem);
-  --fs-body: clamp(0.875rem, 0.721rem + 0.6573vw, 1.3125rem);
-  font-family: 'Roboto', sans-serif;
+  --fs-title: 3rem;
+  --fs-body: 1.3rem;
   --dark-color: #23424a;
   --accent-color: #38cfd9;
 }
 
 html,
 body {
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
   font-size: var(--fs-body);
 }
 
+h1 {
+  font-size: var(--fs-title);
+}
+
+.container {
+  width: 80%;
+  max-width: 1100px;
+  margin: 0 auto;
+}
+
 .hero {
+  padding: 100px 0;
   background-color: var(--dark-color);
   color: #fff;
 }
 
-.hero-container {
-  padding: 7rem 6rem;
-  max-width: 80ch;
+.hero__text {
+  width: 60%;
 }
 
-.hero-title {
-  font-size: var(--fs-title);
-  font-weight: 900;
-  margin-bottom: 0.5em;
-}
-
-.hero-text {
-  color: #ffffffd9;
-  line-height: 1.5;
+.hero p {
   margin-bottom: 3em;
 }
 
 .btn {
   display: inline-block;
-  padding: 0.8em 2.3em;
-  border-radius: 2em;
-  background-color: var(--accent-color);
-  color: var(--dark-color);
-  font-weight: 700;
-  text-transform: uppercase;
   text-decoration: none;
+  text-transform: uppercase;
+  color: var(--dark-color);
+  font-weight: 900;
+  background-color: var(--accent-color);
+  padding: 0.75em 2em;
+  border-radius: 100px;
+}
+
+.btn:hover,
+.btn:focus {
+  opacity: 0.75;
 }
