--- a/day9-a-deeper-dive-into-flexbox/style.css
+++ b/day9-a-deeper-dive-into-flexbox/style.css
@@ -5,4 +5,93 @@
 html,
 body {
   font-family: 'Roboto', sans-serif;
+  font-size: 1.3125rem;
+  line-height: 1.5;
+  margin: 0;
+}
+
+section {
+  padding-block: 1.5em;
+}
+
+img {
+  max-width: 100%;
+}
+
+h1,
+p {
+  margin-top: 0;
+}
+
+h1,
+h2 {
+  line-height: 1;
+}
+.container {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.two-cols {
+  display: flex;
+  justify-content: space-between;
+}
+
+.two-cols__main {
+  width: 63%;
+}
+
+.two-cols__secondary {
+  width: 33%;
+}
+
+.hero {
+  padding-block: 4em;
+  background-color: #23424a;
+  color: white;
+}
+
+.hero__title {
+  font-size: 3rem;
+  margin-bottom: 0.3em;
+}
+
+.hero__text {
+  opacity: 0.9;
+}
+
+.btn {
+  display: inline-block;
+  padding: 0.5em 1.5em;
+  border-radius: 100em;
+  background-color: #38cfd9;
+  color: #3a3a3a;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 900;
+}
+
+.btn:hover {
+  background-color: #5feaf9;
+}
+
+.bg-green {
+  background-color: #136c72;
+  color: white;
+}
+
+.text-green {
+  color: #136c72;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.sidebar {
+  padding: 1em;
+}
+
+.sidebar__content + .sidebar__content {
+  margin-top: 1em;
 }
