feat(day12): add logo

--- a/day11-using-flexbox-for-a-navigation/style.css
+++ b/day11-using-flexbox-for-a-navigation/style.css
@@ -74,6 +74,10 @@ header {
   padding: 1em 0;
 }
 
+.primary-header {
+  display: flex;
+}
+
 .nav {
   display: flex;
   justify-content: space-between;
