--- a/day12-flexbox-challenge-4/style.css
+++ b/day12-flexbox-challenge-4/style.css
@@ -1,3 +1,128 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+:root {
+  --ff-sans: 'Roboto', sans-serif;
+  --ff-serif: 'Playfair Display', serif;
+  --fs-900: 3.75rem;
+  --fs-700: 2.25rem;
+  --fs-500: 1.3125rem;
+  --fs-400: 1.125rem;
+  --fw-light: 300;
+  --fw-regular: 400;
+  --fw-bold: 900;
+
+  --clr-white: #fff;
+  --clr-light: #f3eed9;
+  --clr-medium: #824936;
+  --clr-dark: #222c2a;
+}
+
 body {
-  background-color: #853aee;
+  font-family: var(--ff-sans);
+  font-size: var(--fs-500);
+  font-weight: var(--fw-regular);
+  line-height: 1.5;
+}
+
+section {
+  padding-block: 3em;
+}
+
+h1,
+h2,
+h3 {
+  font-family: var(--ff-serif);
+}
+
+.container {
+  width: 90%;
+  max-width: 70.5rem;
+  margin: 0 auto;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.bg-dark {
+  background-color: var(--clr-dark);
+  color: var(--clr-light);
+}
+
+.clr-dark {
+  color: var(--clr-dark);
+}
+
+.bg-light {
+  background-color: var(--clr-light);
+  color: var(--clr-dark);
+}
+
+.clr-light {
+  color: var(--clr-light);
+}
+
+.bg-medium {
+  background-color: var(--clr-medium);
+  color: var(--clr-light);
+}
+
+.clr-medium {
+  color: var(--clr-medium);
+}
+
+.two-cols {
+  display: flex;
+  justify-content: space-between;
+}
+
+.two-cols--reverse {
+  flex-direction: row-reverse;
+}
+
+.two-cols > * {
+  flex-basis: 47%;
+}
+
+.hero {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 660px;
+  background-color: var(--clr-light);
+  text-align: center;
+}
+
+.hero__title {
+  margin: 0;
+  font-size: var(--fs-900);
+  font-weight: var(--fw-bold);
+  line-height: 1;
+  color: var(--clr-medium);
+  text-wrap: balance;
+}
+
+.hero__subtitle {
+  margin-bottom: 1em;
+  font-size: var(--fs-400);
+  font-weight: var(--fw-light);
+  letter-spacing: 0.4em;
+  text-transform: uppercase;
+}
+
+.section__title {
+  margin-bottom: 1em;
 }
