--- a/day21-final-challenge/style.css
+++ b/day21-final-challenge/style.css
@@ -37,10 +37,6 @@ h4 {
   line-height: 1.1;
 }
 
-/* p {
-  margin: 0;
-} */
-
 section,
 footer {
   padding: 5em 0;
@@ -157,11 +153,13 @@ footer {
 .hero {
   background-color: var(--clr-neutral-200);
   color: var(--clr-neutral-900);
-  font-size: 1.5rem;
+  /* font-size: 1.5rem; */
+  font-size: 1.3125rem;
 }
 
 .hero__title {
-  font-size: 5.625rem;
+  font-size: 3.625rem;
+  /* font-size: 5.625rem; */
 }
 
 .hero__title > b {
@@ -198,7 +196,7 @@ footer {
   color: var(--clr-neutral-900);
 }
 
-.card--in-stack {
+.cards .card {
   margin-bottom: 1em;
 }
 
@@ -271,4 +269,21 @@ footer {
 .secondary-nav__link:focus {
   color: var(--clr-accent-500);
   opacity: 1;
+}
+
+@media (min-width: 43.75rem) {
+  .cards {
+    display: flex;
+  }
+
+  .cards .card {
+    margin-bottom: 0;
+  }
+
+  .cards .card + .card {
+    margin-left: 1em;
+  }
+}
+
+@media (min-width: 62.5rem) {
 }
