--- a/day21-final-challenge/style.css
+++ b/day21-final-challenge/style.css
@@ -105,7 +105,7 @@ footer {
 }
 
 .nav__link,
-.nav__togle,
+.nav__toggle,
 .btn {
   transition: opacity 300ms ease;
 }
@@ -153,13 +153,11 @@ footer {
 .hero {
   background-color: var(--clr-neutral-200);
   color: var(--clr-neutral-900);
-  /* font-size: 1.5rem; */
   font-size: 1.3125rem;
 }
 
 .hero__title {
   font-size: 3.625rem;
-  /* font-size: 5.625rem; */
 }
 
 .hero__title > b {
@@ -274,16 +272,90 @@ footer {
 @media (min-width: 43.75rem) {
   .cards {
     display: flex;
+    gap: 1em;
   }
 
   .cards .card {
     margin-bottom: 0;
   }
-
-  .cards .card + .card {
-    margin-left: 1em;
-  }
 }
 
 @media (min-width: 62.5rem) {
+  .nav-toggle {
+    display: none;
+  }
+
+  .nav {
+    visibility: visible;
+    display: flex;
+    height: auto;
+    margin-left: auto;
+    position: static;
+  }
+
+  .nav__list {
+    display: flex;
+  }
+
+  .nav__list--secondary {
+    margin: 0 0 0 2em;
+  }
+
+  .nav__item {
+    margin: 0 0 0 2em;
+  }
+
+  .row {
+    display: flex;
+  }
+
+  .col {
+    width: 100%;
+  }
+
+  .hero {
+    font-size: 1.5rem;
+    padding-block: 6em;
+    min-height: 50rem;
+  }
+
+  .hero__container {
+    align-items: flex-end;
+  }
+
+  .hero__title {
+    font-size: 5.625rem;
+    margin-bottom: 0;
+  }
+
+  .cards {
+    flex-direction: column;
+    margin-left: 5em;
+    width: 50%;
+  }
+
+  .footer {
+    text-align: left;
+  }
+
+  .footer-container {
+    gap: 6em;
+  }
+
+  .about {
+    max-width: 40%;
+    margin-bottom: 0;
+  }
+
+  .secondary-nav {
+    justify-content: space-between;
+  }
+
+  .secondary-nav-container {
+    width: auto;
+  }
+
+  .secondary-nav__list {
+    margin-bottom: 0;
+  }
 }
